--- a/configs/one2345/neus-stool_r0.5.yaml
+++ b/configs/one2345/neus-stool_r0.5.yaml
@@ -1,24 +1,25 @@
-name: neus-blender-${dataset.scene}
+name: neus-objaverse-r0.5-${dataset.scene}
 tag: ''
 seed: 42
 
 dataset:
-  name: blender
+  name: objaverse
   scene: ???
-  root_dir: ./load/nerf_synthetic/${dataset.scene}
+  root_dir: /home/linghao/Datasets/objaverse-processed/zero12345_img/eval/Objaverse/${dataset.scene}
   img_wh:
-    - 800
-    - 800
+    - 256
+    - 256
   # img_downscale: 1 # specify training image size by either img_wh or img_downscale
-  near_plane: 2.0
-  far_plane: 6.0
+  near_plane: 0.1
+  far_plane: 2.0
   train_split: 'train'
   val_split: 'val'
   test_split: 'test'
+  objaverse_indices: [8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39]
 
 model:
   name: neus
-  radius: 1.5
+  radius: 0.5
   num_samples_per_ray: 1024
   train_num_rays: 256
   max_train_num_rays: 8192
