--- a/configs/trash/neus-oppo.yaml
+++ b/configs/trash/neus-oppo.yaml
@@ -1,17 +1,17 @@
-name: neus-blender-${dataset.scene}
+name: neus-oppo
 tag: ''
 seed: 42
 
 dataset:
-  name: blender
+  name: oppo
   scene: ???
-  root_dir: ./load/nerf_synthetic/${dataset.scene}
+  root_dir: /home/linghao/Datasets/oppo/post_process_egg_colmap_rename/output
   img_wh:
-    - 800
-    - 800
+    - 1600
+    - 2400
   # img_downscale: 1 # specify training image size by either img_wh or img_downscale
-  near_plane: 2.0
-  far_plane: 6.0
+  near_plane: 0.1
+  far_plane: 4.0
   train_split: 'train'
   val_split: 'val'
   test_split: 'test'
