--- a/configs/openill/nerf-oppo_r0.5_half.yaml
+++ b/configs/openill/nerf-oppo_r0.5_half.yaml
@@ -1,24 +1,25 @@
-name: nerf-blender-${dataset.scene}
+name: nerf-oppo-r0.5-half-${dataset.scene}
 tag: ''
 seed: 42
 
 dataset:
-  name: blender
+  name: oppo
   scene: ???
-  root_dir: ./load/nerf_synthetic/${dataset.scene}
+#  root_dir: /home/linghao/Datasets/lightstage_dataset/${dataset.scene}/output
+  root_dir: /mnt/data/NeuRIPS_2023_OpenIlumination/lighting_patterns/${dataset.scene}/output
   img_wh:
-    - 800
-    - 800
+    - 1328
+    - 1992
   # img_downscale: 1 # specify training image size by either img_wh or img_downscale
-  near_plane: 2.0
-  far_plane: 6.0
+  near_plane: 0.3
+  far_plane: 2.0
   train_split: 'train'
   val_split: 'val'
   test_split: 'test'
 
 model:
   name: nerf
-  radius: 1.5
+  radius: 0.5
   num_samples_per_ray: 1024
   train_num_rays: 256
   max_train_num_rays: 8192
@@ -90,7 +91,7 @@ checkpoint:
 
 export:
   chunk_size: 2097152
-  export_vertex_color: False  
+  export_vertex_color: False
 
 trainer:
   max_steps: 20000
